# fai-pt2-nbs

./: .gitignore  00_pb_lecture_10.ipynb  01.01_imagenette_pure_python.ipynb  01.02_matmul_rebuild.ipynb  01_pb_matmul.ipynb  02.02_pb_meanshift.ipynb  02.03_meanshift_rebuild.ipynb  02.04_dbscan.ipynb  02.40_dbscan.ipynb  02.41_dbscan.ipynb  02.42_k_means.ipynb  02.43_k_means.ipynb  02_pb_meanshift.ipynb  03.01_backpropagation_rebuild.ipynb  03.02_gpt_teach_nn.ipynb  03.03_backprop_rebuild.ipynb  03.04_backprop_rebuild.ipynb  03.05_backprop_rebuild.ipynb  03_pb_backprop.ipynb  04.01_minibatch_rebuild.ipynb  04_pb_minibatch.ipynb  hello.py  pyproject.toml
02.01_k_means/02/: 01_k_means.py
03.01_app/03/: 01_app.py
03.02_app/03/: 02_app.py
data/dbscan/: dataset-metadata.json
nbs/: 01_matmul.ipynb  03_backprop.ipynb  _callbacks.ipynb
nbs/peter_nbs/: 01.02_matmul_rebuild.ipynb  01_pb_matmul.ipynb  02.01_pb_k_means.ipynb
sidebars/: python_built_in_funcs.ipynb  python_classes.ipynb  python_classes_01.ipynb  python_dunder_methods.ipynb  python_einsum.ipynb  python_matplotlib.ipynb  python_matplotlib_3d.ipynb  python_std_library.ipynb  pyton_matplotlib_3d.ipynb
snippets/: code_comments.md
supplemental/: nn_tutorial.ipynb
