[project]
name = "fai-pt2-nbs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastcore>=1.8.0",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "matplotlib>=3.10.1",
    "numpy>=2.2.4",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
]
